--- a/HW/HW9.ipynb
+++ b/HW/HW9.ipynb
@@ -76,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "92\n",
+      "No.of co-authors are: 92\n",
       "Co-authors of \"Wilke CO\" in 2015:2019 :\n",
       "  Jack BR  published  6  times with Dr.Wilke\n",
       "  Teufel AI  published  6  times with Dr.Wilke\n",
@@ -188,7 +188,7 @@
     "        #else:\n",
     "         #   coauthors[author]+=1\n",
     "handle.close()\n",
-    "print(len(coauthors))\n",
+    "print('No.of co-authors are:',len(coauthors))\n",
     "print('Co-authors of \"Wilke CO\" in 2015:2019 :')\n",
     "for author in coauthors:\n",
     "    print(\" \", author,\" published \",coauthors[author], \" times with Dr.Wilke\")"
