--- a/Project/Akshay_grad_assignment_practice.Rmd
+++ b/Project/Akshay_grad_assignment_practice.Rmd
@@ -314,5 +314,16 @@ head(data)
 cancer_data = read.csv("breastcancer_data.csv")
 head(cancer_data)
 
+# Reading the data from csv file
+data = read.csv("breastcancer_data.csv")
+
+# Removing NA values if any and removing last column which contains NAs
+data_cleaned = na.omit(data[c(-length(data))])
+
+# considering only mean values for the data analysis
+cancer_data = data_cleaned[,1:12]
+write.csv(cancer_data,'cancer_data.csv',row.names=FALSE)
+head(cancer_data)
+
 ```
 
