--- a/Project/Akshay_grad_assignment.Rmd
+++ b/Project/Akshay_grad_assignment.Rmd
@@ -15,12 +15,13 @@ Attribute Information:
 1) ID number 2) Diagnosis (M = malignant, B = benign) 3-12)
 
 Ten real-valued features are computed for each cell nucleus:
-
 a) radius (mean of distances from center to points on the perimeter) b) texture (standard deviation of gray-scale values) c) perimeter d) area e) smoothness (local variation in radius lengths) f) compactness (perimeter^2 / area - 1.0) g) concavity (severity of concave portions of the contour) h) concave points (number of concave portions of the contour) i) symmetry j) fractal dimension ("coastline approximation" - 1)
 
 Class distribution: 357 benign, 212 malignant
 
 ### Question
+Breast cancer is one of the most common cancer among women and one of the major causes of the death. When detected early, it can be treated effectively but when we detect in the advanced stages treatment becomes difficult. There are different diagnosis technique out of which "Fine needle aspiration(FNA) with visual interpretation" is one of them. Since visual interpretation involves human errors so it would be better if we could automate it to reduce diagnostic errors. The current dataset contains various  computational interpretation of FNA  like nuclei radius, area. As we can see, there are so many of them and all of them are not important. Since we want to build ML model, we want to build on good or important features. This report is about that, finding out those features.
+
 Find out which features are important for diagnosis of Breast Cancer?
 
 ### Answer
