--- a/Project/project3.ipynb
+++ b/Project/project3.ipynb
@@ -92,9 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thrL\n"
+     ]
+    }
+   ],
    "source": [
     "from Bio import SeqIO\n",
     "\n",
@@ -108,7 +116,11 @@
     "record_CT18 = SeqIO.read(in_handle, \"genbank\")\n",
     "in_handle.close()\n",
     "\n",
-    "# your code goes here"
+    "# your code goes here\n",
+    "for feature in record_LT2.features:\n",
+    "    if feature.type =='CDS': \n",
+    "        print(feature.qualifiers['gene'][0])\n",
+    "        break"
    ]
   },
   {
