--- a/Class/class22.ipynb
+++ b/Class/class22.ipynb
@@ -206,28 +206,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'group'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-9416ee6f974c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# all these calls should produce the number 123-456-7890\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mclean_phone_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"1234567890\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mclean_phone_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"+1 (123) 456-7890\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mclean_phone_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"1 123 456 7890\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-26-9416ee6f974c>\u001b[0m in \u001b[0;36mclean_phone_number\u001b[0;34m(input)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m#test_string = input\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mmatch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"\\s\\d\\s\\d\\d\\d\\d\\d\\d\\d\\d\\d\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# all these calls should produce the number 123-456-7890\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'group'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'1234567890' contains the phone number 123-456-7890\n",
+      "'+1 (123) 456-7890' contains the phone number 123-456-7890\n",
+      "'1 123 456 7890' contains the phone number 123-456-7890\n",
+      "'(123) 4567890' contains the phone number 123-456-7890\n",
+      "'123456' is not a valid phone number\n"
      ]
     }
    ],
    "source": [
+    "import re\n",
     "def clean_phone_number(input):\n",
     "    # implement your function here\n",
     "    #test_string = input\n",
-    "    match=re.search(r\"\\s\\d\\s\\d\\d\\d\\d\\d\\d\\d\\d\\d\",input)\n",
-    "    print(match.group())\n",
+    "#     match=re.search(r\"\\s\\d\\s\\d\\d\\d\\d\\d\\d\\d\\d\\d\",input)\n",
+    "#     print(match.group())\n",
+    "    match = re.search(r'(\\d{3})\\D*(\\d{3})\\D*(\\d{4})', input)\n",
+    "    if match:\n",
+    "        cleaned_number = match.group(1) + \"-\" + match.group(2) + \"-\" + match.group(3)\n",
+    "        print(\"'\" + input + \"' contains the phone number \" + cleaned_number)\n",
+    "    else:\n",
+    "        print(\"'\" + input + \"' is not a valid phone number\")\n",
     "\n",
     "# all these calls should produce the number 123-456-7890\n",
     "clean_phone_number(\"1234567890\")\n",
