--- a/Class/class23.ipynb
+++ b/Class/class23.ipynb
@@ -397,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "John Smith\n"
+      "Error: name doesn't match the expected pattern.\n"
      ]
     }
    ],
@@ -413,19 +413,40 @@
     "\n",
     "\n",
     "def extract_first_name(name):\n",
+    "    # first extract the first name + initial\n",
+    "    match = re.search(r\"\\S+,\\s(.+)\", name) # is the name given in the form \"last, ...\"?\n",
     "    \n",
-    "    match = re.search(\"\\S+\\s\\S+\",name)\n",
     "    if match:\n",
-    "        print(match.group())\n",
-    "    \n",
+    "        first_and_initial = match.group(1)\n",
+    "        print(1)\n",
+    "    else: # no, name is given in the form \"... last\"\n",
+    "        match = re.search(r\"(.+)\\s\\S+\", name)\n",
+    "        if match:\n",
+    "            first_and_initial = match.group(1)\n",
+    "            print(2)\n",
+    "        else:\n",
+    "            print(\"Error: name doesn't match the expected pattern.\")\n",
+    "            return\n",
+    "    match = re.search(r\"(\\S+)\\s\\S\\.\", first_and_initial) # is the name given as first + initial?\n",
+    "    if match:\n",
+    "        print(\"First name:\", match.group(1))\n",
+    "        print(3)\n",
+    "        return\n",
+    "    match = re.search(r\"\\S\\.\\s(\\S+)\", first_and_initial) # is the name given as initial + first?\n",
+    "    if match:\n",
+    "        print(\"First name:\", match.group(1))\n",
+    "        print(4)\n",
+    "        return\n",
+    "# no initial given\n",
+    "    print(\"First name:\", first_and_initial)\n",
     "\n",
     "extract_first_name(\"John Smith\")\n",
-    "#extract_first_name(\"Miller, Jack\")\n",
-    "#extract_first_name(\"Susie R. Benner\")\n",
-    "#extract_first_name(\"Smith, April B.\")\n",
-    "#extract_first_name(\"Miller, R. Ben\")\n",
-    "#extract_first_name(\"A. Jane Doe\")\n",
-    "#extract_first_name(\"abcde\") # not a valid name, creates an error"
+    "extract_first_name(\"Miller, Jack\")\n",
+    "extract_first_name(\"Susie R. Benner\")\n",
+    "extract_first_name(\"Smith, April B.\")\n",
+    "extract_first_name(\"Miller, R. Ben\")\n",
+    "extract_first_name(\"A. Jane Doe\")\n",
+    "extract_first_name(\"abcde\") # not a valid name, creates an error"
    ]
   }
  ],
