proj 3 2nd part

--- a/Project/project3.ipynb
+++ b/Project/project3.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,12 @@
      "output_type": "stream",
      "text": [
       "There are 3242 named protein-coding genes in S. enterica LT2\n",
-      "No.of named genes which have synonyms in S. enterica CT18 are 1511\n"
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "No.of named genes which have synonyms in S. enterica CT18 are 1516\n"
      ]
     }
    ],
@@ -149,10 +154,14 @@
     "\n",
     "#print(len(prot_syn_names))\n",
     "count = 0\n",
-    "for i in prot_syn_names.keys():\n",
-    "    if i in prot_names.keys():\n",
-    "        count+=1\n",
-    "print(\"No.of named genes which have synonyms in S. enterica CT18 are\",count)        "
+    "count1 = 0\n",
+    "for i in prot_names.keys():\n",
+    "    if i in prot_syn_names.keys():\n",
+    "        #count+=1\n",
+    "        count1+=prot_syn_names[i]\n",
+    "        if prot_syn_names[i]!=1:\n",
+    "            print(prot_syn_names[i])\n",
+    "print(\"No.of named genes which have synonyms in S. enterica CT18 are\",count1)   \n"
    ]
   },
   {
